:pencil: Se crearon catálogos de detalle
